...
    <string name="panel_depois_outro">Um depois do outro</string>
    <string name="panel_desacelerar">Desacelerar</string>
    <string name="panel_desce">Desce</string>
    <string name="panel_desenhar_mao">Desenhar à mão</string>
    <string name="panel_desfoque">Desfoque</string>
    <string name="panel_desfoque_brilho_cor_outros_efeitos_aplicados">Desfoque, brilho, cor e os outros efeitos aplicados a este vetor.</string>
    <string name="panel_desfoque_movimento">Desfoque de movimento</string>
    <string name="panel_desfoque_movimento_video">Desfoque do movimento do vídeo</string>
    <string name="panel_desfoque_sombra">desfoque da sombra</string>
    <string name="panel_desligada">Desligada</string>
    <string name="panel_desligada_propriedade_usa_keyframes">Desligada: a propriedade usa os keyframes.</string>
    <string name="panel_desligar_efeito">Desligar efeito</string>
    <string name="panel_desligar_efeitos">desligar efeitos</string>
...
